--- a/part_1_regression.ipynb
+++ b/part_1_regression.ipynb
@@ -2301,7 +2301,7 @@
     "\n",
     "# sort features by importance\n",
     "sorted_idx = np.argsort(importances)[::-1]\n",
-    "#sorted_features = np.array(feature_list)[sorted_idx]\n",
+    "sorted_features = np.array(feature_list)[sorted_idx]\n",
     "sorted_importances = importances[sorted_idx]\n",
     "sorted_std = importances_std[sorted_idx]\n",
     "\n",
